fix width on small comentary

--- a/components/AnimeReview/styles.module.scss
+++ b/components/AnimeReview/styles.module.scss
@@ -44,6 +44,7 @@
 
 .comentary {
   grid-area: comentary;
+  width: 100%;
 }
 
 .score {
